force-app/main/default/objects/animalos__Charge_Outcome__c/animalos__Charge_Outcome__c.object-meta.xml
<CustomObject>
    <label>Charge Outcome</label>
    <nameField>
        <displayFormat>CO{00000}</displayFormat>
        <label>Charge Outcome ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Charge Outcomes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>