force-app/main/default/objects/animalos__Charge_Outcome__c/fields/animalos__Charge__c.field-meta.xml
<CustomField>
    <fullName>animalos__Charge__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Charge</label>
    <referenceTo>animalos__Charge__c</referenceTo>
    <relationshipName>Outcomes</relationshipName>
    <type>Lookup</type>
</CustomField>