force-app/main/default/objects/animalos__Charge_Outcome__c/fields/animalos__Compliance_Status__c.field-meta.xml
<CustomField>
    <fullName>animalos__Compliance_Status__c</fullName>
    <label>Compliance Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>