force-app/main/default/objects/animalos__Charge_Outcome__c/fields/animalos__Date_Of_Order__c.field-meta.xml
<CustomField>
    <fullName>animalos__Date_Of_Order__c</fullName>
    <label>Date Of Order</label>
    <type>Date</type>
</CustomField>