force-app/main/default/objects/animalos__Charge_Outcome__c/fields/animalos__Enforcement_Action__c.field-meta.xml
<CustomField>
    <fullName>animalos__Enforcement_Action__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Enforcement Action</label>
    <referenceTo>animalos__Enforcement_Action__c</referenceTo>
    <relationshipLabel>Charge Outcomes</relationshipLabel>
    <relationshipName>Charge_Outcomes</relationshipName>
    <type>Lookup</type>
</CustomField>