force-app/main/default/objects/animalos__Charge_Outcome__c/fields/animalos__Job_Contact__c.field-meta.xml
<CustomField>
    <fullName>animalos__Job_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job Contact</label>
    <referenceTo>animalos__Job_Contact__c</referenceTo>
    <relationshipName>Outcomes</relationshipName>
    <type>Lookup</type>
</CustomField>