force-app/main/default/objects/animalos__Charge_Outcome__c/fields/animalos__Outcome_Type__c.field-meta.xml
<CustomField>
    <fullName>animalos__Outcome_Type__c</fullName>
    <label>Outcome Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Substantive</fullName>
            </value>
            <value>
                <fullName>Additional outcomes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>